fix:changed image in protoype parade

--- a/src/prototype_parade.html
+++ b/src/prototype_parade.html
@@ -32,7 +32,7 @@
         
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="../res/pixel_big.jpg"
+                <img src="../res/Project.jpg"
                     alt="Pixel Perfects" >
                 <div class="event-details-border"></div>
             </div>
