added some changes

--- a/src/prototype_parade.html
+++ b/src/prototype_parade.html
@@ -32,7 +32,7 @@
         
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="../res/pixel_big.jpg"
+                <img src="../res/prototype_big.jpg"
                     alt="Pixel Perfects" >
                 <div class="event-details-border"></div>
             </div>
@@ -72,10 +72,12 @@
         <div class="event-rules-container">
             <h2 class="event-rules-heading">RULES AND REGULATIONS</h2>
             <ul class="event-rules-list">
-                <li>Open to students as per event criteria.</li>
+                <li>The model should be in a good working condition and the students must bring their necessary accessories. General purpose equipment such as power supply will be provided.
+                </li>
                 <li>2-4 members per team or individual participation allowed.</li>
-                <li>Participants must bring their own laptops.</li>
-                <li>Can be hardware-based, software-based, or a combination of both.</li>
+                <li>A team consists of 1-6 members or individual participation allowed.</li>
+                <li>Projects can be hardware-based, software-based, or a combination of both.
+                </li>
             </ul>
         </div>
     </section>
