--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -49,7 +49,7 @@
       <!-- Event Card 1 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="../res/tech_main.jpg"
+          <img src="../res/pixel_small.jpg"
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
@@ -125,7 +125,7 @@
       <!-- Event Card 6 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="../res/runtime_small.jpeg" alt="Prototype Parade">
+          <img src="../res/prototype_small.jpg" alt="Prototype Parade">
         </div>
         <div class="event-card-content">
           <h3 class="event-card-title">Prototype Parade</h3>
