--- a/src/prototype_parade.html
+++ b/src/prototype_parade.html
@@ -74,10 +74,9 @@
             <ul class="event-rules-list">
                 <li>The model should be in a good working condition and the students must bring their necessary accessories. General purpose equipment such as power supply will be provided.
                 </li>
-                <li>2-4 members per team or individual participation allowed.</li>
                 <li>A team consists of 1-6 members or individual participation allowed.</li>
-                <li>Projects can be hardware-based, software-based, or a combination of both.
-                </li>
+                <li>Participants must bring their own laptops.</li>
+                <li>Projects can be hardware-based, software-based, or a combination of both.</li>
             </ul>
         </div>
     </section>
