--- a/teams.html
+++ b/teams.html
@@ -53,7 +53,7 @@
 
             <div class="team-member-card">
                 <div class="team-member-image">
-                    <img src="./res/thanush_photo.jpg"
+                    <img src="./res/thanush.jpg"
                         alt="Thanush S">
                 </div>
                 <h3 class="team-member-name">Thanush S</h3>
