--- a/forms/success.html
+++ b/forms/success.html
@@ -17,7 +17,7 @@
     <div class="success-container">
         <div class="glow-box">
             <h1>🎉 Success! 🎉</h1>
-            <p>Your registration has been successfully submitted.</p>
+            <p>Your registration has been successfully submitted. Please check your email (including the spam folder) for further details.</p>
             <a href="../index.html" class="btn">Back to Home</a>
         </div>
     </div>
