--- a/forms/pixel_perfect.html
+++ b/forms/pixel_perfect.html
@@ -69,12 +69,32 @@
     transition: 0.3s;
 }
 
+
 .button::before {
     position: absolute;
     content: "Back"; /* Set text */
     color: white;
     font-size: 0px;
     transition: 0.3s;
+}
+.spinner {
+  width: 15px;
+  height: 15px;
+  border: 2px solid white;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  display: inline-block;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
 }
 
 .button:hover::before {
@@ -199,7 +219,11 @@
               <option value="4">4</option>
               
             </select>
-            <button type="submit" >Register</button>
+            <button type="submit" id="registerBtn">
+              <span id="btnText">Register</span>
+              <span id="loadingSpinner" class="spinner" style="display: none;"></span>
+            </button>
+            
           </form>
         </div>
       </div>
@@ -248,6 +272,15 @@ document.addEventListener("DOMContentLoaded", function () {
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
     event.preventDefault();
 
+    const registerBtn = document.getElementById("registerBtn");
+    const btnText = document.getElementById("btnText");
+    const loadingSpinner = document.getElementById("loadingSpinner");
+
+    // Show loading, disable button
+    registerBtn.disabled = true;
+    btnText.style.display = "none";
+    loadingSpinner.style.display = "inline-block";
+
     const formData = {
         participantName: document.getElementById("participantName").value,
         email: document.getElementById("email").value,
@@ -271,13 +304,16 @@ document.addEventListener("DOMContentLoaded", function () {
         throw new Error("Registration failed");
     })
     .then(data => {
-        // ✅ Redirect to success page after registration
-        window.location.href = "success.html";
+        window.location.href = "success.html"; // Redirect on success
     })
     .catch(error => {
         alert("Error submitting form. Please try again.");
+        registerBtn.disabled = false;  // Re-enable button
+        btnText.style.display = "inline";
+        loadingSpinner.style.display = "none";
     });
 });
+
 
   </script>
 
