--- a/forms/surprise_event.html
+++ b/forms/surprise_event.html
@@ -210,7 +210,8 @@
   <script src="script.js"></script>
   
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
+    
+document.addEventListener("DOMContentLoaded", function () {
         particlesJS("event-details-particles", {
             particles: {
                 number: { value: 100, density: { enable: true, value_area: 800 } },
@@ -242,6 +243,40 @@
             retina_detect: true
         });
     });
+
+document.addEventListener("DOMContentLoaded", function () {
+    particlesJS("particles-js", {
+        particles: {
+            number: { value: 100, density: { enable: true, value_area: 800 } },
+            color: { value: "#00FFFF" },
+            shape: { type: "circle" },
+            opacity: { value: 0.5, random: true },
+            size: { value: 3, random: true },
+            line_linked: {
+                enable: true,
+                distance: 150,
+                color: "#00FFFF",
+                opacity: 0.4,
+                width: 1
+            },
+            move: {
+                enable: true,
+                speed: 2,
+                direction: "none",
+                random: false,
+                out_mode: "out"
+            }
+        },
+        interactivity: {
+            events: {
+                onhover: { enable: true, mode: "grab" },
+                onclick: { enable: true, mode: "push" }
+            }
+        },
+        retina_detect: true
+    });
+});
+
 
 function goBack() {
         window.history.back(); // Takes the user to the previous page
