--- a/forms/rhetoric_rumble.html
+++ b/forms/rhetoric_rumble.html
@@ -13,14 +13,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     /* Add styles for the particle container */
-    #event-details-particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 50vh;
+      z-index: -1;
+    }
 
     /* From Uiverse.io by vinodjangid07 */ 
 .button {
@@ -59,6 +57,15 @@
     background-color: #00FF99;
     align-items: center;
     justify-content: center;
+}
+.spinner {
+  width: 15px;
+  height: 15px;
+  border: 2px solid white;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  display: inline-block;
+  animation: spin 0.6s linear infinite;
 }
 
 /* Hide arrow when hovering */
@@ -199,7 +206,10 @@
               
             </select>
 
-            <button type="submit">Register</button>
+            <button type="submit" id="registerBtn">
+              <span id="btnText">Register</span>
+              <span id="loadingSpinner" class="spinner" style="display: none;"></span>
+            </button>
           </form>
         </div>
       </div>
@@ -210,72 +220,6 @@
   <script src="script.js"></script>
   
   <script>
-    
-document.addEventListener("DOMContentLoaded", function () {
-        particlesJS("event-details-particles", {
-            particles: {
-                number: { value: 100, density: { enable: true, value_area: 800 } },
-                color: { value: "#00FFFF" },
-                shape: { type: "circle" },
-                opacity: { value: 0.5, random: true },
-                size: { value: 3, random: true },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#00FFFF",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: "none",
-                    random: false,
-                    out_mode: "out"
-                }
-            },
-            interactivity: {
-                events: {
-                    onhover: { enable: true, mode: "grab" },
-                    onclick: { enable: true, mode: "push" }
-                }
-            },
-            retina_detect: true
-        });
-    });
-
-document.addEventListener("DOMContentLoaded", function () {
-    particlesJS("particles-js", {
-        particles: {
-            number: { value: 100, density: { enable: true, value_area: 800 } },
-            color: { value: "#00FFFF" },
-            shape: { type: "circle" },
-            opacity: { value: 0.5, random: true },
-            size: { value: 3, random: true },
-            line_linked: {
-                enable: true,
-                distance: 150,
-                color: "#00FFFF",
-                opacity: 0.4,
-                width: 1
-            },
-            move: {
-                enable: true,
-                speed: 2,
-                direction: "none",
-                random: false,
-                out_mode: "out"
-            }
-        },
-        interactivity: {
-            events: {
-                onhover: { enable: true, mode: "grab" },
-                onclick: { enable: true, mode: "push" }
-            }
-        },
-        retina_detect: true
-    });
-});
 
     function goBack() {
       window.history.back();
