--- a/forms/rhetoric_rumble.html
+++ b/forms/rhetoric_rumble.html
@@ -58,6 +58,14 @@
     align-items: center;
     justify-content: center;
 }
+
+
+/* Hide arrow when hovering */
+.button:hover .svgIcon {
+    opacity: 0;
+    transform: translateX(-10px); /* Moves it left before disappearing */
+    transition: 0.3s;
+}
 .spinner {
   width: 15px;
   height: 15px;
@@ -67,14 +75,15 @@
   display: inline-block;
   animation: spin 0.6s linear infinite;
 }
-
-/* Hide arrow when hovering */
-.button:hover .svgIcon {
-    opacity: 0;
-    transform: translateX(-10px); /* Moves it left before disappearing */
-    transition: 0.3s;
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
+button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
 .button::before {
     position: absolute;
     content: "Back"; /* Set text */
