--- a/forms/prototype_parade.html
+++ b/forms/prototype_parade.html
@@ -13,12 +13,10 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         /* Add styles for the particle container */
-        #event-details-particles {
+        #particles-js {
             position: fixed;
-            top: 0;
-            left: 0;
             width: 100%;
-            height: 100%;
+            height: 50vh;
             z-index: -1;
         }
 
@@ -129,7 +127,7 @@ button:disabled {
 
     <!-- Event Registration Form -->
     <section class="event-cards-container">
-        <h2 class="event-cards-heading">Prototype Registration</h2>
+        <h2 class="event-cards-heading">Event Registration</h2>
 
         <section id="events" class="events-container">
             <div class="events-inner">
@@ -260,72 +258,6 @@ button:disabled {
     <script src="script.js"></script>
 
     <script>
-        
-document.addEventListener("DOMContentLoaded", function () {
-        particlesJS("event-details-particles", {
-            particles: {
-                number: { value: 100, density: { enable: true, value_area: 800 } },
-                color: { value: "#00FFFF" },
-                shape: { type: "circle" },
-                opacity: { value: 0.5, random: true },
-                size: { value: 3, random: true },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#00FFFF",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: "none",
-                    random: false,
-                    out_mode: "out"
-                }
-            },
-            interactivity: {
-                events: {
-                    onhover: { enable: true, mode: "grab" },
-                    onclick: { enable: true, mode: "push" }
-                }
-            },
-            retina_detect: true
-        });
-    });
-
-document.addEventListener("DOMContentLoaded", function () {
-    particlesJS("particles-js", {
-        particles: {
-            number: { value: 100, density: { enable: true, value_area: 800 } },
-            color: { value: "#00FFFF" },
-            shape: { type: "circle" },
-            opacity: { value: 0.5, random: true },
-            size: { value: 3, random: true },
-            line_linked: {
-                enable: true,
-                distance: 150,
-                color: "#00FFFF",
-                opacity: 0.4,
-                width: 1
-            },
-            move: {
-                enable: true,
-                speed: 2,
-                direction: "none",
-                random: false,
-                out_mode: "out"
-            }
-        },
-        interactivity: {
-            events: {
-                onhover: { enable: true, mode: "grab" },
-                onclick: { enable: true, mode: "push" }
-            }
-        },
-        retina_detect: true
-    });
-});
 
         function goBack() {
             window.history.back();
