--- a/forms/rhetoric_rumble.html
+++ b/forms/rhetoric_rumble.html
@@ -14,59 +14,63 @@
   <style>
     /* Add styles for the particle container */
     #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 50vh;
-      z-index: -1;
-    }
+            position: fixed;
+            width: 100%;
+            height: 50vh;
+            z-index: -1;
+        }
 
-    /* From Uiverse.io by vinodjangid07 */ 
-.button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: rgb(20, 20, 20);
-    border: none;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
-    cursor: pointer;
-    transition: 0.3s;
-    overflow: hidden;
-    position: relative;
-    margin-left: 20px;
-    margin-top: 10px;
-}
+        /* From Uiverse.io by vinodjangid07 */
+        .button {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background-color: rgb(20, 20, 20);
+            border: none;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 0px 0px 4px rgba(180, 160, 255, 0.253);
+            cursor: pointer;
+            transition: 0.3s;
+            overflow: hidden;
+            position: relative;
+            margin-left: 20px;
+            margin-top: 10px;
+            outline: none;
+        }
 
-.svgIcon {
-    width: 12px;
-    transform: rotate(270deg); /* Always face left */
-    transition: 0.3s;
-}
+        .svgIcon {
+            width: 12px;
+            transform: rotate(270deg);
+            /* Always face left */
+            transition: 0.3s;
+        }
 
-.svgIcon path {
-    fill: white;
-}
+        .svgIcon path {
+            fill: white;
+        }
 
-.button:hover {
-    width: 100px;  /* Expand width for text */
-    border-radius: 50px;
-    transition: 0.3s;
-    background-color: #00FF99;
-    align-items: center;
-    justify-content: center;
-}
+        .button:hover {
+            width: 100px;
+            /* Expand width for text */
+            border-radius: 50px;
+            transition: 0.3s;
+            background-color: #00FF99;
+            align-items: center;
+            justify-content: center;
+        }
 
+        /* Hide arrow when hovering */
+        .button:hover .svgIcon {
+            opacity: 0;
+            transform: translateX(-10px);
+            /* Moves it left before disappearing */
+            transition: 0.3s;
+        }
 
-/* Hide arrow when hovering */
-.button:hover .svgIcon {
-    opacity: 0;
-    transform: translateX(-10px); /* Moves it left before disappearing */
-    transition: 0.3s;
-}
-.spinner {
+        .spinner {
   width: 15px;
   height: 15px;
   border: 2px solid white;
@@ -75,6 +79,7 @@
   display: inline-block;
   animation: spin 0.6s linear infinite;
 }
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -84,19 +89,21 @@ button:disabled {
   background-color: gray;
   cursor: not-allowed;
 }
-.button::before {
-    position: absolute;
-    content: "Back"; /* Set text */
-    color: white;
-    font-size: 0px;
-    transition: 0.3s;
-}
 
-.button:hover::before {
-    font-size: 13px;
-    opacity: 1;
-    transition: 0.3s;
-}
+        .button::before {
+            position: absolute;
+            content: "Back";
+            /* Set text */
+            color: white;
+            font-size: 0px;
+            transition: 0.3s;
+        }
+
+        .button:hover::before {
+            font-size: 13px;
+            opacity: 1;
+            transition: 0.3s;
+        }
   </style>
 </head>
 
@@ -236,6 +243,16 @@ button:disabled {
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
       event.preventDefault();
 
+      const registerBtn = document.getElementById("registerBtn");
+    const btnText = document.getElementById("btnText");
+    const loadingSpinner = document.getElementById("loadingSpinner");
+
+    // Show loading, disable button
+    registerBtn.disabled = true;
+    btnText.style.display = "none";
+    loadingSpinner.style.display = "inline-block";
+
+
       const formData = {
         participantName: document.getElementById("participantName").value,
         email: document.getElementById("email").value,
@@ -264,6 +281,9 @@ button:disabled {
     })
     .catch(error => {
         alert("Error submitting form. Please try again.");
+        registerBtn.disabled = false;  // Re-enable button
+        btnText.style.display = "inline";
+        loadingSpinner.style.display = "none";
     });
 });
   </script>
