--- a/forms/cerebra_quest.html
+++ b/forms/cerebra_quest.html
@@ -13,14 +13,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     /* Add styles for the particle container */
-    #event-details-particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 50vh;
+      z-index: -1;
+    }
 
     /* From Uiverse.io by vinodjangid07 */ 
 .button {
@@ -68,6 +66,25 @@
     transition: 0.3s;
 }
 
+.spinner {
+  width: 15px;
+  height: 15px;
+  border: 2px solid white;
+  border-top: 2px solid transparent;
+  border-radius: 50%;
+  display: inline-block;
+  animation: spin 0.6s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+button:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
 .button::before {
     position: absolute;
     content: "Back"; /* Set text */
@@ -198,8 +215,10 @@
               <option value="4">4</option>
               
             </select>
-
-            <button type="submit">Register</button>
+            <button type="submit" id="registerBtn">
+              <span id="btnText">Register</span>
+              <span id="loadingSpinner" class="spinner" style="display: none;"></span>
+            </button>
           </form>
         </div>
       </div>
@@ -211,77 +230,20 @@
   
   <script>
 
-document.addEventListener("DOMContentLoaded", function () {
-        particlesJS("event-details-particles", {
-            particles: {
-                number: { value: 100, density: { enable: true, value_area: 800 } },
-                color: { value: "#00FFFF" },
-                shape: { type: "circle" },
-                opacity: { value: 0.5, random: true },
-                size: { value: 3, random: true },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#00FFFF",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: "none",
-                    random: false,
-                    out_mode: "out"
-                }
-            },
-            interactivity: {
-                events: {
-                    onhover: { enable: true, mode: "grab" },
-                    onclick: { enable: true, mode: "push" }
-                }
-            },
-            retina_detect: true
-        });
-    });
-
-document.addEventListener("DOMContentLoaded", function () {
-    particlesJS("particles-js", {
-        particles: {
-            number: { value: 100, density: { enable: true, value_area: 800 } },
-            color: { value: "#00FFFF" },
-            shape: { type: "circle" },
-            opacity: { value: 0.5, random: true },
-            size: { value: 3, random: true },
-            line_linked: {
-                enable: true,
-                distance: 150,
-                color: "#00FFFF",
-                opacity: 0.4,
-                width: 1
-            },
-            move: {
-                enable: true,
-                speed: 2,
-                direction: "none",
-                random: false,
-                out_mode: "out"
-            }
-        },
-        interactivity: {
-            events: {
-                onhover: { enable: true, mode: "grab" },
-                onclick: { enable: true, mode: "push" }
-            }
-        },
-        retina_detect: true
-    });
-});
-
     function goBack() {
       window.history.back();
     }
     document.getElementById("registrationForm").addEventListener("submit", function (event) {
       event.preventDefault();
+
+    const registerBtn = document.getElementById("registerBtn");
+    const btnText = document.getElementById("btnText");
+    const loadingSpinner = document.getElementById("loadingSpinner");
+
+    // Show loading, disable button
+    registerBtn.disabled = true;
+    btnText.style.display = "none";
+    loadingSpinner.style.display = "inline-block";
 
       const formData = {
         participantName: document.getElementById("participantName").value,
@@ -311,6 +273,9 @@ document.addEventListener("DOMContentLoaded", function () {
     })
     .catch(error => {
         alert("Error submitting form. Please try again.");
+        registerBtn.disabled = false;  // Re-enable button
+        btnText.style.display = "inline";
+        loadingSpinner.style.display = "none";
     });
 });
   </script>
