--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#events" class="nav-link">Events</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                     <li><a href="teams.html" class="nav-link">Team</a></li>
-                    <li><a href="bus.html" class="nav-link">Bus Route</a></li>
+                    <li><a href="bus.html" class="nav-link">Routes</a></li>
 
                 </ul>
             </nav>
