--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="contact-info">
                 <h3>President</h3>
                 <p>Gokul Kanna M L<br> <a href="tel:+919940290789">+91 9940290789</a></p>
-                <p>Nithish Kumar K N<br> <a href="tel:+919150276535">+91 9150276535</a></p>
+                <p>Nitish Kumar K N<br> <a href="tel:+919150276535">+91 9150276535</a></p>
             </div>
 
             <!-- Vice President -->
