--- a/src/cerebra_quest.html
+++ b/src/cerebra_quest.html
@@ -71,6 +71,14 @@
                 <li>Quiz questions will be displayed on the smart screen and participants will be provided with flashcards to show their options.</li>
                 <li>Discussion with other team during the rounds is strictly prohibited.</li>
                 <li>If found malpractice that team would be disqualified.</li>
+                <li>Offline Event</li>
+                <li>No usage of any electric devices is permitted inside the event</li>
+                <li>A team of up to 3 members can participate as a single team</li>
+                <li>Each member may only belong to one team</li>
+                <li>Participants from only the permitted colleges are allowed to participate</li>
+                <li>The management will provide bus and food facilities</li>
+                <li>Winners will be rewarded with a cash prize and a winning certificate</li>
+                <li>Participation certificate will be provided to all the participants</li>
             </ul>
         </div>
     </section>
