--- a/src/surprise_event.html
+++ b/src/surprise_event.html
@@ -28,7 +28,7 @@
         <div id="event-details-particles"></div>
         <div class="event-details-card">
             <div class="event-details-image">
-                <img src="../res/surprise_big.jpg"
+                <img src="../res/surprise_small.jpg"
                     alt="Case Analytix">
                 <div class="event-details-border"></div>
             </div>
