--- a/teams.html
+++ b/teams.html
@@ -35,7 +35,7 @@
         <div class="team-members-grid">
             <div class="team-member-card">
                 <div class="team-member-image">
-                    <img src=""
+                    <img src="./res/kavin.jpg"
                         alt="Kavin S">
                 </div>
                 <h3 class="team-member-name">Kavin S</h3>
@@ -44,7 +44,7 @@
 
             <div class="team-member-card">
                 <div class="team-member-image">
-                    <img src="WhatsApp Image 2025-02-14 at 09.19.15_a64a1c1d.jpg"
+                    <img src="./res/elzin.jpg"
                         alt="Elzin ">
                 </div>
                 <h3 class="team-member-name">Elzin Selva M</h3>
