--- a/src/nontechnical_events.html
+++ b/src/nontechnical_events.html
@@ -49,7 +49,7 @@
       <!-- Event Card 1 -->
       <div class="event-card">
         <div class="event-card-image">
-          <img src="../res/surprise_small.jpg"
+          <img src="../res/surprise_big.jpg"
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
