--- a/forms/runtime_error.html
+++ b/forms/runtime_error.html
@@ -206,15 +206,7 @@ button:disabled {
             </select>
 
             <label for="participantsCount">Number of Participants:</label>
-            <select id="participantsCount" name="participantsCount" required>
-
-              <option value="" disabled selected>Select Number of Participants</option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              
-            </select>
+          
             <button type="submit" id="registerBtn">
               <span id="btnText">Register</span>
               <span id="loadingSpinner" class="spinner" style="display: none;"></span>
@@ -252,7 +244,7 @@ function goBack() {
         phoneNumber: document.getElementById("phoneNumber").value,
         college: document.getElementById("college").value,
         year: document.getElementById("year").value,
-        participantsCount: parseInt(document.getElementById("participantsCount").value)
+        participantsCount: parseInt(1)
       };
 
       fetch("https://courageous-simplicity-production.up.railway.app/coding", {
