--- a/forms/runtime_error.html
+++ b/forms/runtime_error.html
@@ -205,14 +205,10 @@ button:disabled {
               <option value="3rd Year">3rd Year</option>
             </select>
 
-            <label for="participantsCount">Number of Participants:</label>
+            <label for="participantsCount">Number of Participants: 1</label>
             <select id="participantsCount" name="participantsCount" required>
 
-              <option value="" disabled selected>Select Number of Participants</option>
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
+             
               
             </select>
             <button type="submit" id="registerBtn">
