--- a/src/nontechnical_events.html
+++ b/src/nontechnical_events.html
@@ -78,7 +78,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
+          <p>Category : ndividual Participants / Group</p>
           <a href="./rhetoric_rumble.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
