--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -79,7 +79,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Group Event</p>
+          <p>Category : GIndividual Event / Group Event</p>
           <a href="./business_mastery.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
@@ -99,7 +99,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Group/Individual Event</p>
+          <p>Category : Individual Event / Group Event</p>
           <a href="./cerebra_quest.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
@@ -117,7 +117,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Individual Event</p>
+          <p>Category : Individual Event / Group Event</p>
           <a href="./runtime_error.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
@@ -135,7 +135,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Group/Individual Event</p>
+          <p>Category : Individual Event / Group Event</p>
           <a href="./prototype_parade.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
@@ -153,7 +153,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Group/ Event</p>
+          <p>Category : Individual Event / Group Event</p>
           <a href="./innovatrix.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
