--- a/forms/rhetoric_rumble.html
+++ b/forms/rhetoric_rumble.html
@@ -13,10 +13,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     /* Add styles for the particle container */
-    #particles-js {
+    #event-details-particles {
             position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 50vh;
+            height: 100%;
             z-index: -1;
         }
 
@@ -236,6 +238,72 @@ button:disabled {
   <script src="script.js"></script>
   
   <script>
+
+document.addEventListener("DOMContentLoaded", function () {
+        particlesJS("event-details-particles", {
+            particles: {
+                number: { value: 100, density: { enable: true, value_area: 800 } },
+                color: { value: "#00FFFF" },
+                shape: { type: "circle" },
+                opacity: { value: 0.5, random: true },
+                size: { value: 3, random: true },
+                line_linked: {
+                    enable: true,
+                    distance: 150,
+                    color: "#00FFFF",
+                    opacity: 0.4,
+                    width: 1
+                },
+                move: {
+                    enable: true,
+                    speed: 2,
+                    direction: "none",
+                    random: false,
+                    out_mode: "out"
+                }
+            },
+            interactivity: {
+                events: {
+                    onhover: { enable: true, mode: "grab" },
+                    onclick: { enable: true, mode: "push" }
+                }
+            },
+            retina_detect: true
+        });
+    });
+
+document.addEventListener("DOMContentLoaded", function () {
+    particlesJS("particles-js", {
+        particles: {
+            number: { value: 100, density: { enable: true, value_area: 800 } },
+            color: { value: "#00FFFF" },
+            shape: { type: "circle" },
+            opacity: { value: 0.5, random: true },
+            size: { value: 3, random: true },
+            line_linked: {
+                enable: true,
+                distance: 150,
+                color: "#00FFFF",
+                opacity: 0.4,
+                width: 1
+            },
+            move: {
+                enable: true,
+                speed: 2,
+                direction: "none",
+                random: false,
+                out_mode: "out"
+            }
+        },
+        interactivity: {
+            events: {
+                onhover: { enable: true, mode: "grab" },
+                onclick: { enable: true, mode: "push" }
+            }
+        },
+        retina_detect: true
+    });
+});
 
     function goBack() {
       window.history.back();
