--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -79,7 +79,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : GIndividual Event / Group Event</p>
+          <p>Category : Individual Event / Group Event</p>
           <a href="./business_mastery.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
