--- a/src/technical_events.html
+++ b/src/technical_events.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=1024">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Event</title>
   <link rel="stylesheet" href="../styles/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -79,7 +79,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : Individual Event / Group Event</p>
+          <p>Category : GIndividual Event / Group Event</p>
           <a href="./business_mastery.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
