--- a/teams.html
+++ b/teams.html
@@ -39,6 +39,7 @@
                         alt="Kavin S">
                 </div>
                 <h3 class="team-member-name">Kavin S</h3>
+                <p class="team-member-role">Frontend Developer</p>
                 <a href="https://www.linkedin.com/in/kavins26/" class="connect-button"><i class="fas fa-link"></i> Connect</a>
             </div>
 
@@ -48,6 +49,7 @@
                         alt="Elzin ">
                 </div>
                 <h3 class="team-member-name">Elzin Selva M</h3>
+                <p class="team-member-role">Backend Developer</p>
                 <a href="https://www.linkedin.com/in/elzinm/" class="connect-button"><i class="fas fa-link"></i> Connect</a>
             </div>
 
@@ -57,6 +59,7 @@
                         alt="Thanush S">
                 </div>
                 <h3 class="team-member-name">Thanush S</h3>
+                <p class="team-member-role">Frontend Developer</p>
                 <a href="https://www.linkedin.com/in/thanush-s-917191266" class="connect-button"><i class="fas fa-link"></i> Connect</a>
             </div>
 
@@ -66,6 +69,7 @@
                         alt="Divakar P">
                 </div>
                 <h3 class="team-member-name">Divakar P</h3>
+                <p class="team-member-role">Backend Developer</p>
                 <a href="https://www.linkedin.com/in/divakar-p-96584025b/" class="connect-button"><i class="fas fa-link"></i> Connect</a>
             </div>
         </div>
