--- a/src/nontechnical_events.html
+++ b/src/nontechnical_events.html
@@ -53,7 +53,7 @@
             alt="Case Analytix">
         </div>
         <div class="event-card-content">
-          <h3 class="event-card-title">Suprise Event</h3>
+          <h3 class="event-card-title">Surprise Event</h3>
           <p class="event-card-tags">#UnveilTheThrill, EmbraceTheMystery</p>
           <p class="event-card-description">#UnveilTheThrill 🔥 – No clues, just vibes!🤯</p>
         </div>
@@ -78,7 +78,7 @@
         <div class="event-card-hover-content">
           <p>Time : 08:30 AM</p>
           <p>Entry Fee : Free</p>
-          <p>Category : ndividual Participants / Group</p>
+          <p>Category : Individual Participants / Group</p>
           <a href="./rhetoric_rumble.html" class="event-card-link">Tap For Details</a>
         </div>
       </div>
