--- a/forms/rhetoric_rumble.html
+++ b/forms/rhetoric_rumble.html
@@ -213,6 +213,17 @@ button:disabled {
               <option value="3rd Year">3rd Year</option>
             </select>
 
+               <label for="participantsCount">Number of Participants:</label>
+            <select id="participantsCount" name="participantsCount" required>
+
+              <option value="" disabled selected>Select Number of Participants</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              
+            </select>
+
 
             <button type="submit" id="registerBtn">
               <span id="btnText">Register</span>
