--- a/forms/innovatrix.html
+++ b/forms/innovatrix.html
@@ -320,7 +320,7 @@ document.addEventListener("DOMContentLoaded", function () {
         participantsCount: parseInt(1)
     };
 
-    fetch("https://courageous-simplicity-production.up.railway.app/uiux", {
+    fetch("https://courageous-simplicity-production.up.railway.app/paper", {
         method: "POST",
         headers: {
             "Content-Type": "application/json"
