--- a/teams.html
+++ b/teams.html
@@ -22,7 +22,7 @@
 
     <!-- Back to Main Website Link -->
     <div class="back-link">
-        <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Dextro'25</a>
+        <a href="index.html"><i class="fas fa-arrow-left"></i> Back to Dextero'25</a>
     </div>
 
     <!-- Team Section -->
