--- a/index.html
+++ b/index.html
@@ -269,8 +269,14 @@
             <!-- Registration and Help Desk -->
             <div class="contact-info">
                 <h3>Student Coordinators</h3>
-               
                 <p>Tamil Kumaran S<br> <a href="tel:+916374264988">+91 6374264988</a></p>
+                <p>Akshith G<br> <a href="tel:+919059566898">+91 9059566898</a></p>
+            </div>
+
+            <div class="contact-info">
+                <h3>Secretary</h3>
+                <p>Serah Anna Ajith<br> <a href="tel:+919043790391">+91 9043790391</a></p>
+                <p>Mahathi<br> <a href="tel:+918328549879">+91 8328549879</a></p>
             </div>
 
             <!-- Support & Email -->
