added some change

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <p>Ms. Monica Lakshmi R<br> <a href="tel:+917708208016">+91 7708208016</a></p>
             </div>
 
-            <!-- Registration and Help Desk -->
+            <!-- Registration and Help Dek -->
             <div class="contact-info">
                 <h3>Student Coordinators</h3>
                 <p>Tamil Kumaran S<br> <a href="tel:+916374264988">+91 6374264988</a></p>
