--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
         .gradient-text {
             background: linear-gradient(90deg, cyan, white);
             -webkit-background-clip: text;
+            background-clip: text;
         }
     
         /* Make "Symposium" stand out */
         #word2 {
             background: linear-gradient(90deg, cyan, white);
             -webkit-background-clip: text;
+            background-clip: text;
             font-weight: bold;
         }
     
