--- a/forms/pixel_perfect.html
+++ b/forms/pixel_perfect.html
@@ -231,42 +231,9 @@ button:disabled {
   </section>
 
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="../script.js"></script>
+  <!-- <script src="../script.js"></script> -->
   
   <script>
-
-document.addEventListener("DOMContentLoaded", function () {
-        particlesJS("event-details-particles", {
-            particles: {
-                number: { value: 100, density: { enable: true, value_area: 800 } },
-                color: { value: "#00FFFF" },
-                shape: { type: "circle" },
-                opacity: { value: 0.5, random: true },
-                size: { value: 3, random: true },
-                line_linked: {
-                    enable: true,
-                    distance: 150,
-                    color: "#00FFFF",
-                    opacity: 0.4,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: "none",
-                    random: false,
-                    out_mode: "out"
-                }
-            },
-            interactivity: {
-                events: {
-                    onhover: { enable: true, mode: "grab" },
-                    onclick: { enable: true, mode: "push" }
-                }
-            },
-            retina_detect: true
-        });
-    });
 
 document.addEventListener("DOMContentLoaded", function () {
     particlesJS("particles-js", {
